--- a/templates/immobilier/index.html.twig
+++ b/templates/immobilier/index.html.twig
@@ -1,20 +1,49 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ImmobilierController!{% endblock %}
+{% block title %}Immobilier index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Immobilier index</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Prix</th>
+                <th>Description</th>
+                <th>Adresse</th>
+                <th>Ville</th>
+                <th>Region</th>
+                <th>Nbr_chambres</th>
+                <th>Statut</th>
+                <th>Image</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for immobilier in immobiliers %}
+            <tr>
+                <td>{{ immobilier.id }}</td>
+                <td>{{ immobilier.prix }}</td>
+                <td>{{ immobilier.description }}</td>
+                <td>{{ immobilier.adresse }}</td>
+                <td>{{ immobilier.ville }}</td>
+                <td>{{ immobilier.region }}</td>
+                <td>{{ immobilier.nbrChambres }}</td>
+                <td>{{ immobilier.statut }}</td>
+                <td><img src="{{ asset('images/' ~ immobilier.image) }}" alt="Image de l'immobilier" style="max-width: 100px; max-height: 100px;"></td>
+                <td>
+                    <a href="{{ path('app_immobilier_show', {'id': immobilier.id}) }}">show</a>
+                    <a href="{{ path('app_immobilier_edit', {'id': immobilier.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="10">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/xampp_New/htdocs/SymfonyProject/SymfonyProject/src/Controller/ImmobilierController.php</code></li>
-        <li>Your template at <code>C:/xampp_New/htdocs/SymfonyProject/SymfonyProject/templates/immobilier/index.html.twig</code></li>
-    </ul>
-</div>
+    <a href="{{ path('app_immobilierGet_new') }}">Create new</a>
 {% endblock %}
