--- a/templates/home/app_home.html.twig
+++ b/templates/home/app_home.html.twig
@@ -105,6 +105,12 @@
                     <li><a href="{{ path('app_logout') }}" title="Logout"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
                     <li><a href="{{ path('app_reservation_get_new') }}" title="Réservations"><i class="fas fa-calendar-alt"></i> Réservations</a></li>
                     <li><a href="{{ path('app_immobilierGet_new') }}" title="Immobilier"><i class="fas fa-building"></i> Immobilier</a></li>
+                        <li>
+                            <a href="{{ path('app_reclamation_new') }}" class="btn btn-warning btn-sm">
+                                <i class="fas fa-exclamation-circle"></i> Faire une réclamation
+                            </a>
+
+                        </li>
                 </ul>
             </nav>
         </div>
