--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,29 +2,42 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}My Website{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     {% block stylesheets %}
-        <link rel="stylesheet" href="{{ asset('css/imobilier.css') }}">
+
     {% endblock %}
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{{ path('app_home') }}">Immo</a>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav me-auto">
+            <a class="navbar-brand" href="{{ path('app_home') }}">
+                <i class="fas fa-home"></i> Immo
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="{{ path('app_immobilier_index') }}">Biens</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ path('app_avis_index') }}">Avis</a></li>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_reclamation_index') }}">
+                                <i class="fas fa-list-alt"></i> Réclamations
+                            </a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
     </nav>
 </header>
 
-<main>
+<main class="py-5 mt-4">
     {% block body %}{% endblock %}
 </main>
 
