--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,8 +22,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="{{ path('app_immobilier_index') }}">Biens</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ path('app_immobilier_index') }}"><i class="fas fa-building"></i> Immobilier</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ path('app_avis_index') }}">Avis</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ path('app_reservation_index') }}"><i class="fas fa-calendar-alt"></i> Réservations</a></li>
+                    <a class="nav-link" href="{{ path('app_immobilier_search') }}">Rechercher un bien</a>
+
                     {% if is_granted('ROLE_ADMIN') %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('app_reclamation_index') }}">
@@ -40,7 +43,8 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end">
                                 <li><a class="dropdown-item" href="{{ path('app_profile') }}">Mon Profil</a></li>
-                                <li><a class="dropdown-item" href="{{ path('app_logout') }}">Se Déconnecter</a></li>
+                                <li><a class="dropdown-item" href="{{ path('app_logout') }}"><i class="fas fa-sign-out-alt"></i>Se Déconnecter</a></li>
+                                <li><a class="dropdown-item" href="{{ path('app_login') }}"><i class="fas fa-sign-in-alt"></i> Se Connecter</a></li>
                             </ul>
                         </li>
                         <!-- <li class="nav-item dropdown">
@@ -61,9 +65,11 @@
         </div>
     </nav>
 </header>
+<!-- Footer -->
 
 <main class="py-5 mt-4">
     {% block body %}{% endblock %}
+
 </main>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js">
